crates/macro/ui-tests/unknown-type-in-import.stderr
error[E0412]: cannot find type `A` in this scope
 --> ui-tests/unknown-type-in-import.rs:6:19
  |
6 |     pub fn foo(a: A);
  |                   ^ not found in this scope
  |
help: you might be missing a type parameter
  |
6 |     pub fn foo<A>(a: A);
  |               +++

error[E0412]: cannot find type `A` in this scope
 --> ui-tests/unknown-type-in-import.rs:6:19
  |
6 |     pub fn foo(a: A);
  |                   ^ not found in this scope
